WAM-Studio-SF-Build/force-app/main/default/objects/Portfolio_Alert__c/Portfolio_Alert__c.object-meta.xml
<CustomObject>
    <description>Portfolio drift/risk/cash alert on a financial account. Part of Salesforce Wealth AI Studio.</description>
    <label>Portfolio Alert</label>
    <nameField>
        <displayFormat>PAL-{00000}</displayFormat>
        <label>Portfolio Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>