WAM-Studio-SF-Build/force-app/main/default/objects/Portfolio_Alert__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portfolio Alerts</relationshipLabel>
    <relationshipName>Portfolio_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>