WAM-Studio-SF-Build/force-app/main/default/objects/Portfolio_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Drift</fullName><default>true</default><label>Drift</label></value>
            <value><fullName>Concentration</fullName><default>false</default><label>Concentration</label></value>
            <value><fullName>Risk</fullName><default>false</default><label>Risk</label></value>
            <value><fullName>Cash</fullName><default>false</default><label>Cash</label></value>
            <value><fullName>Suitability</fullName><default>false</default><label>Suitability</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>