WAM-Studio-SF-Build/force-app/main/default/objects/Portfolio_Alert__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipLabel>Portfolio Alerts</relationshipLabel>
    <relationshipName>Portfolio_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>