WAM-Studio-SF-Build/force-app/main/default/objects/Portfolio_Alert__c/fields/Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Detail__c</fullName>
    <label>Reason Detail</label>
    <description>Human-readable explanation of why this portfolio alert was raised.</description>
    <inlineHelpText>Why this alert fired — the specific condition detected.</inlineHelpText>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>